--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,5 @@
-title: Fairport Ridge Apartments | Corning, NY
+title: Luxury Apartments in Corning NY | Fairport Ridge Apartments
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Fairport Ridge Apartments is a luxurious apartment complex located in Big Flats, near Corning NY.
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
