--- a/_data/images.yml
+++ b/_data/images.yml
@@ -1,16 +1,5 @@
-- src: img/b1.jpg
-  alt: Fairport Ridge Apartments
-- src: img/b1.jpg
-  alt: Fairport Ridge Apartments
-- src: img/b1.jpg
-  alt: Fairport Ridge Apartments
-- src: img/b1.jpg
-  alt: Fairport Ridge Apartments
-- src: img/b1.jpg
-  alt: Fairport Ridge Apartments
-- src: img/b1.jpg
-  alt: Fairport Ridge Apartments
-- src: img/b1.jpg
-  alt: Fairport Ridge Apartments
-- src: img/b1.jpg
-  alt: Fairport Ridge Apartments
+- src: b1.jpg
+- src: b2.jpg
+- src: b3.jpg
+- src: b4.jpg
+- src: b5.jpg
