--- a/_data/general.yml
+++ b/_data/general.yml
@@ -1,7 +1,7 @@
 banner: One suite available
 contact_button: Contact Us
 header: Fairport Ridge Apartments
-subheader: Luxury Apartments near Corning / Horseheads, New York.
+subheader: Luxury Apartments Near Corning / Horseheads, New York.
 amenities:
   - item: Pet Friendly
   - item: Attached Garages
