--- a/_data/general.yml
+++ b/_data/general.yml
@@ -1,4 +1,4 @@
-banner: One suite available
+banner: One 3 Bedroom 2 Car Attached Garage Unit Available 
 contact_button: Contact Us
 header: Fairport Ridge Apartments
 subheader: Luxury Apartments Near Corning / Horseheads, New York.
@@ -25,13 +25,7 @@ images:
 faq:
   - question: Are pets allowed?
     answer: Of course! We love pets and realize they're part of the family.
-  - question: What should this question be?
-    answer: Excellent question, and at this point I'm not entirely sure.
-  - question: What about this question?
-    answer: Again, I really don't know.
-  - question: How many question can go here?
-    answer: As many as you'd like!
-email: email@example.com
-phone: (314) 159-2653
-address: 756 Fischler St. Ext.
-footer_text: Luxury Apartments near Corning NY. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+email: mossorealty@gmail.com
+phone: (570) 439-1087
+address: 1 Rickey Farm Lane, Horseheads, NY
+footer_text: Luxury Apartments near Corning NY.
