--- a/_data/general.yml
+++ b/_data/general.yml
@@ -11,8 +11,8 @@ amenities:
   - item: Modern Kitchen
   - item: Excellent Craftsmanship
   - item: Energy Efficient
-availability: Availability is rare, but you can add yourself to the mailing list for future vacancies.
-pricing: Prices range from $1,000 to $2,000. Our luxury apartments beat out our competitors in price to square foot!
+availability: Call or email today and we will do our best to accommodate you. Call Tony at (607) 738-1068 or email mossorealty@gmail.com
+pricing: Prices range from $1,800 to $1,975. Our luxury apartments are an incredible value. We beat our competitors in price to square foot, our garages are attached, and they are all single floor!
 image_text: The most luxurious apartment complex in Corning, Big Flats, Elmira, and Horseheads.
 image_src: b1.jpg
 lifestyle: The Fairport Ridge lifestyle is all about freedom and luxury. You'll have the freedom to enjoy your apartment home as well as your hobbies and interests because you won't be saddled with all the responsibilities of home ownership. The hassles of maintaining the grass and landscaping, cleaning the gutters, repairing appliances, or shoveling the snow are all gone. Pursue what you love to do and leave the hassles up to us!
@@ -24,8 +24,20 @@ images:
   - src: b5.jpg
 faq:
   - question: Are pets allowed?
-    answer: Of course! We love pets and realize they're part of the family.
+    answer: Of course! We love pets and realize they're part of the family.There are additional fees required for pets. Breed and size restrictions may apply. Additional rules pertaining to pets apply.
+  - question: Are utilities included?
+    answer: Utilities are not included. However, our new luxury apartments are very energy efficient. All of our apartments are extremely well insulated, pass the stringent New York State Energy Code for air tightness, and have energy star rated appliances. Your utilities would consist of NYSEG for electric and natural gas, and the Village of Horseheads for water. You may choose to have Spectrum for cable television/telephone or satellite television if coordinated with us in advance.
+  - question: What type of heat is it?
+    answer: The apartments are all heated with natural gas furnaces. Additionally the furnaces are the most efficient on the market today with an energy efficiency rating of 97 percent! 
+  - question: Do the units have air conditioning?
+    answer: Yes! Every unit has central air conditioning.
+  - question: Does the monthly rental price include the garage?
+    answer: Yes, it is included in the rent. All garages are attached and allow for direct access to the apartment.  
+  - question: How long is the lease?
+    answer: The minimum lease is for one year.
+  - question: Is there a deposit required?
+    answer: Yes, a deposit is required equal to one month’s rent.
 email: mossorealty@gmail.com
-phone: (570) 439-1087
+phone: (607) 738-1068
 address: 1 Rickey Farm Lane, Horseheads, NY
-footer_text: Luxury Apartments near Corning NY.
+footer_text: Luxury Single Story Apartments in Horseheads, NY. We’re located conveniently near Corning, Elmira, Painted Post & Ithaca, NY. Situated at the base of Prospect Hill, Fairport Ridge offers a quiet, peaceful location, yet we’re only minutes from Corning, Shopping, Schools, and Corning-Elmira Regional Airport.
