--- a/_data/general.yml
+++ b/_data/general.yml
@@ -1,4 +1,4 @@
-banner: One 3 Bedroom 2 Car Attached Garage Unit Available 
+banner: Brand New!  We have a 3 Bedroom, 2 Car Attached Garage Unit Available In March 2020.  Better Hurry before it's gone! 
 contact_button: Contact Us
 header: Fairport Ridge Apartments
 subheader: Luxury Apartments Near Corning / Horseheads, New York.
