--- a/_data/general.yml
+++ b/_data/general.yml
@@ -1,4 +1,4 @@
-banner: Brand New!  We have a 3 Bedroom, 2 Car Attached Garage, Single Story Unit Available In March 2020.  Hurry, it won't last long!
+banner: Construction is in progress at Fairport Ridge!  Located directly behind the Elks Lodge at Hickory Grove Road and Prospect Hill Road.
 contact_button: Contact Us
 header: Fairport Ridge Apartments
 subheader: Luxury Apartments Near Corning / Horseheads, New York.
