--- a/_data/general.yml
+++ b/_data/general.yml
@@ -1,4 +1,4 @@
-banner: Construction is in progress at Fairport Ridge!  Located directly behind the Elks Lodge at Hickory Grove Road and Prospect Hill Road.
+banner: Construction is in progress at Fairport Ridge!  Located directly behind the Elks Lodge at Hickory Grove Road and Prospect Hill Road.  Email today!  mossoanthony@yahoo.com
 contact_button: Contact Us
 header: Fairport Ridge Apartments
 subheader: Luxury Apartments Near Corning / Horseheads, New York.
