--- a/_data/general.yml
+++ b/_data/general.yml
@@ -22,7 +22,7 @@ images:
   - src: b3.jpg
   - src: b4.jpg
   - src: b5.jpg
-  - src: dscn0039.jpg
+  - src: DSCN0039.jpg
 faq:
   - question: Are pets allowed?
     answer: Of course! We love pets and realize they're part of the family.There are additional fees required for pets. Breed and size restrictions may apply. Additional rules pertaining to pets apply.
