--- a/_data/general.yml
+++ b/_data/general.yml
@@ -15,7 +15,7 @@ availability: Call or email today and we will do our best to accommodate you. Ca
 pricing: Prices range from $1,900 to $2,095.00 Our luxury apartments are an incredible value. We beat our competitors in price to square foot, our garages are attached, and they are all single floor!
 image_text: The most luxurious apartment complex in Corning, Big Flats, Elmira, and Horseheads.
 image_src: b1.jpg
-lifestyle: The Fairport Ridge lifestyle is all about freedom and luxury. You'll have the freedom to enjoy your apartment home as well as your hobbies and interests because you won't be saddled with all the responsibilities of home ownership. The hassles of maintaining the grass and landscaping, cleaning the gutters, repairing appliances, or shoveling the snow are all gone. Pursue what you love to do and leave the hassles up to us!
+lifestyle: The Fairport Ridge lifestyle is all about freedom and luxury. You'll have the freedom to enjoy your apartment home as well as your hobbies and interests because you won't be saddled with all the responsibilities of home ownership. The hassles of maintaining the grass and landscaping, cleaning the gutters, repairing appliances, or shoveling the snow are all gone. All of our units at Faiport Ridge are three bedroom units making them perfrect for guests, an office or craft room. Pursue what you love to do and leave the hassles up to us!
 images:
   - src: b1.jpg
   - src: b2.jpg
@@ -36,7 +36,7 @@ faq:
   - question: Do the units have air conditioning?
     answer: Yes! Every unit has central air conditioning.
   - question: Does the monthly rental price include the garage?
-    answer: Yes, it is included in the rent. All garages are attached and allow for direct access to the apartment.  
+    answer: Yes, it is included in the rent. All garages (all two car garages) are attached and allow for direct access to the apartment.   
   - question: How long is the lease?
     answer: The minimum lease is for one year.
   - question: Is there a deposit required?
